--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -48,10 +48,10 @@
 
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">
+                                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control form-control-user", @placeholder = "First Name"})
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
+                                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control form-control-user", @placeholder = "Last Name"})
                                     </div>
                                 </div>
                                 <div class="form-group">
