--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,6 +59,12 @@
                     <span>Manage Roles</span>
                 </a>
             </div>
+            <div class="nav-item active">
+                <a class="nav-link" href="@Url.Action("ManageProjects", "Admin")">
+                    <i></i>
+                    <span>Manage Projects</span>
+                </a>
+            </div>
 
 
 
