--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -65,6 +65,18 @@
                     <span>Manage Projects</span>
                 </a>
             </div>
+            <div class="nav-item active">
+                <a class="nav-link" href="@Url.Action("Index", "Projects")">
+                    <i></i>
+                    <span>Projects</span>
+                </a>
+            </div>
+            <div class="nav-item active">
+                <a class="nav-link" href="@Url.Action("Index", "Tickets")">
+                    <i></i>
+                    <span>Tickets</span>
+                </a>
+            </div>
 
 
 
