--- a/Views/Account/UserProfile.cshtml
+++ b/Views/Account/UserProfile.cshtml
@@ -1,15 +1,56 @@
-﻿@model Bug_Tracker.Models.ApplicationUser
+﻿@using Microsoft.AspNet.Identity
+@model Bug_Tracker.Models.ApplicationUser
 @{
     ViewBag.Title = "UserProfile";
 }
 
-<h2>UserProfile</h2>
-@Html.DisplayFor(Model => Model.FirstName)
-@Html.DisplayFor(Model => Model.LastName)
-@Html.DisplayFor(Model => Model.DisplayName)
-@Html.DisplayFor(Model => Model.UserName)
-@Html.DisplayFor(Model => Model.Email)
+<h2>Your Profile</h2>
 
+<div>
 
-<button class="btn btn-primary">Edit Profile</button>
+    <hr />
+    <dl class="dl-horizontal">
+
+        <dt>
+            @Html.DisplayNameFor(Model => Model.FirstName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(Model => Model.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(Model => Model.LastName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(Model => Model.LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(Model => Model.DisplayName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(Model => Model.DisplayName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(Model => Model.UserName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(Model => Model.UserName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(Model => Model.Email)
+        </dt>
+        <dd>
+            @Html.DisplayFor(Model => Model.Email)
+        </dd>
+
+    </dl>
+</div>
+<p>
+    @Html.ActionLink("Change your password", "ChangePassword", "Manage")
+</p>
+
+<a class="btn btn-primary" href="@Url.Action("EditUserProfile","Account", new { id = User.Identity.GetUserId()})">Edit Profile</a>
 
