--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Bug_Tracker.Models.Project>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Projects";
 }
 
-<h2>Index</h2>
+<h2>Projects</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -28,9 +28,6 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Created)
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Updated)
-                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -46,9 +43,6 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Created)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Updated)
                             </td>
                             <td>
                                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
