--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -9,7 +9,7 @@
 <h2>Create Ticket</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm( new { enctype = "Multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
