--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -26,20 +26,16 @@
         <dd>
             @Html.DisplayFor(model => model.Created)
         </dd>
-
-
     </dl>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to Projects", "Index")
+    </p>
+    <hr />
 </div>   
 
-<div>
-    
-    <hr />
-    
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
 
 
 <div class="card shadow mb-4">
@@ -82,6 +78,9 @@
                         <th>
                             @Html.DisplayName("Updated")
                         </th>
+                        <th>
+                            @Html.DisplayName("Ticket Attachments")
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -118,6 +117,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => Ticket.Updated)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => Ticket.TicketAttachments)
                         </td>
                         <td>
                             @Html.ActionLink("Edit", "Edit", new { id = Ticket.Id }) |
