--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -67,6 +67,14 @@
             </div>
         </div>
 
+         <div class="form-group">
+            @Html.Label("File Upload", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("Image", new { htmlAttributes = new {  type= "file", id="fileUpload"} })
+                @Html.ValidationMessageFor(model => model.TicketAttachments, "", new { @class = "text-danger" })
+            </div>
+        </div> 
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-primary" />
