--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -49,6 +49,9 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Updated)
                         </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.TicketAttachments)
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -85,6 +88,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Updated)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TicketAttachments)
                         </td>
                         <td>
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
