--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -50,10 +50,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SubmiterId, "SubmiterId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SubmiterID, "SubmiterId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("SubmiterId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.SubmiterId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.SubmiterID, "", new { @class = "text-danger" })
             </div>
         </div>
 
