--- a/Views/TicketAttachments/Details.cshtml
+++ b/Views/TicketAttachments/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Ticket.SubmiterId)
+            @Html.DisplayNameFor(model => model.Ticket.SubmiterID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Ticket.SubmiterId)
+            @Html.DisplayFor(model => model.Ticket.SubmiterID)
         </dd>
 
         <dt>
