--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -63,7 +63,7 @@
                             @Html.DisplayFor(modelItem => item.Project.Name)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Submiter.FirstName)
+                            @Html.DisplayFor(modelItem => item.Submiter.DisplayName)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.TicketPriority.Name)
