--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -41,7 +41,7 @@
                             </div>
 
 
-                            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal user", role = "form" }))
+                            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal user", role = "form", enctype = "Multipart/form-data" }))
                             {
                                 @Html.AntiForgeryToken()
                                 @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -68,7 +68,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
 
+                                    </div>
+                                    <div class="col-sm-6">
+                                        @Html.TextBox("Avatar",null, new { type ="file"})
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <div>
