--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -7,8 +7,9 @@
 <h2>Tickets</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a class="btn btn-primary" href="@Url.Action("Create", "Tickets")">Create New</a>
 </p>
+
 
 <div class="card shadow mb-4">
     <div class="card-header py-3">
