--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -41,8 +41,9 @@
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold">Tickets</h6>
-        <a class="" href="@Url.Action("")">Create Ticket</a>
+        <div><a class="" href="@Url.Action("")">Create Ticket</a></div>
     </div>
+    
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
