--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Projects</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a class="btn btn-primary" href="@Url.Action("Create", "Projects")">Create New</a>
 </p>
 
 <div class="card shadow mb-4">
